some proplem solve

--- a/src/App.css
+++ b/src/App.css
@@ -84,7 +84,12 @@ button {
     height: 300px;
     position: relative;
    }
- 
+   img {
+    height:133px;
+    width: 270px;
+    margin: 0 auto;
+  }
+  
 
    .seemore {
     padding:2px 3px;
