--- a/src/App.css
+++ b/src/App.css
@@ -77,6 +77,7 @@ button {
     justify-content:center;
     cursor:pointer;
     color: aliceblue;
+    height: auto;
   }
   .mycard {
     margin: 0 auto;
