--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,7 @@ button {
     justify-content:center;
     cursor:pointer;
     color: aliceblue;
-    height: auto;
+
   }
   .mycard {
     margin: 0 auto;
@@ -107,7 +107,7 @@ button {
   }
   .card-list {
     /* width: 85vw; */
-    margin: 0 auto;
+    margin: 1rem auto;
     display:grid;
     grid-template-columns:1fr;
     grid-gap: 11px;
