--- a/src/App.css
+++ b/src/App.css
@@ -32,13 +32,13 @@ border-radius:15px;
   cursor:pointer;
   color: aliceblue;
 }
-.card-list {
+/* .card-list {
   width: 85vw;
   margin: 0 auto;
   display:grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap:20px;
-}
+} */
 
 button {
   margin-top:2rem;
@@ -105,13 +105,13 @@ button {
     text-align: center;
     color: aliceblue;
   }
-  .card-list {
+  /* .card-list {
     /* width: 85vw; */
-    margin: 1rem auto;
+    /* margin: 1rem auto;
     display:grid;
     grid-template-columns:1fr 1fr 1fr;
     grid-gap: 11px;
-  }
+  } */ 
 
   button {
     margin-top:2rem;
@@ -127,6 +127,25 @@ button {
     }
 }
 
+
+
+.card-list {
+  width: 85vw;
+  margin: 0 auto;
+  display:grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap:  20px;
+}
+
+@media only screen and (max-width: 900px) {
+  .card-list {
+      width: 85vw;
+      margin: 0 auto;
+      display:grid;
+      grid-template-columns: 1fr;
+      grid-gap:  9px;
+  }
+}
 
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
