--- a/src/App.css
+++ b/src/App.css
@@ -80,10 +80,10 @@ button {
 
   }
   .mycard {
-    margin: 0 auto;
+    margin: 1rem auto;
     width: 320px;
     height: 300px;
-    position: relative;
+    
    }
    img {
     height:133px;
@@ -143,7 +143,7 @@ button {
       margin: 0 auto;
       display:grid;
       grid-template-columns: 1fr;
-      grid-gap:  9px;
+      grid-gap:  11px;
   }
 }
 
